Fix for TEAM-211 - checkboxes not initialy visible in contacts/groups list editor doesn't work.

--- a/chrome/oneteam/skin/default/listeditor/listeditor.css
+++ b/chrome/oneteam/skin/default/listeditor/listeditor.css
@@ -27,3 +27,6 @@
     list-style-image: url(imgs/commit-dis.png);
 }
 
+listitem[type="checkbox"] {
+  -moz-binding: url("chrome://oneteam/content/bindings/contactselector.xml#listitem-checkbox");
+}
